# app-challenge-rubem

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  db.py  flask_app.py  huey_app.py  logging_setup.py  starkbank_setup.py
app/cli/: create_db.py  create_test_db.py  drop_db.py  migrate.py  run_create_invoices_job.py  seed.py  setup_db.py
app/health/: routes.py
app/jobs/: __init__.py  invoices.py  transfers.py
app/middleware/: request_logger.py
app/models/: api_log.py  destination_account.py  exceptions.py  invoice.py  payer.py  transfer.py
app/schemas/: destination_account.py  invoice.py  payer.py  transfer.py
app/services/: api_logger.py  sanitizer.py  starkbank_invoice.py  starkbank_transfer.py
app/services/webhooks/: starkbank_webhook_event_factory.py  starkbank_webhook_service.py
app/services/webhooks/strategies/: _invoice_lookup.py  _transfer_lookup.py  base.py  invoice_canceled_strategy.py  invoice_created_strategy.py  (+10 more)
app/webhooks/: routes.py
devenv/: docker-compose.yml
docker/: Dockerfile.web  Dockerfile.worker  docker-compose.yml
migrations/: 001_create_api_logs.py  002_create_destination_accounts.py  003_create_payers.py  004_create_invoices.py  005_create_transfers.py  006_rename_invoice_fee_to_processing_fee.py  007_add_external_id_to_transfers.py  008_add_default_to_destination_accounts.py  009_add_correlation_id_to_invoices.py
tests/: conftest.py  factories.py  test_invoices_job.py  test_sanitizer.py  test_transfers_job.py  test_webhooks.py
tests/support/: fake_events.py
